--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,18 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
+      <h1 class="mt-5">Excuse generator!</h1>
+      <p id="excusa" class="alert alert-warning mt-4">
+        Su excusa se verá reflejada acá
+      </p>
+      <button class="btn btn-success">Generate</button>
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
         an error
       </p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a href="https://www.4geeksacademy.com">MGcode23</a>
       </div>
     </div>
   </body>
